<resources>
    <string name="app_name">ecosystems</string>
    <string name="image_error">Здесь должна быть картинка</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="input_login_str_i"><i>Введите логин</i></string>
    <string name="input_password_str_i"><i>Введите пароль</i></string>
    <string name="log_in">Войти</string>
    <string name="not_registered">Ещё не зарегистрированы?</string>
    <string name="to_register_u"><u>Зарегистрироваться</u></string>
    <string name="user_agreement">Нажимая на кнопку \'Зарегистироваться\' я принимаю <a href="https://smartecosystems.petrsu.ru/agreement"> условия пользовательского соглашения</a></string>
    <string name="new_login_Str">Email (логин)*</string>
    <string name="full_name">ФИО</string>
    <string name="org_str">Организация</string>
    <string name="password_str">Пароль*</string>
    <string name="repeat_password_str">Повторить пароль*</string>
    <string name="close">Закрыть</string>
    <string name="to_register">Зарегистрироваться</string>

    <string-array name="account_section_names">
        <item>Аккаунт</item>
        <item>Управление устройствами</item>
    </string-array>

    <string-array name="device_type_names">
        <item>Метеостанция</item>
        <item>Модуль</item>
        <item>Фотоловушка</item>
        <item>Аудиоулавливатель</item>
        <item>Сейсмостанция</item>
        <item>Модуль ИИ</item>
        <item>Метеостанция Сокол</item>
        <item>WiFiMeteo станция</item>
        <item>Метеостанция Гидрометцентра России</item>
        <item>Модуль ИИ пожары</item>
        <item>Метеостанция М</item>
        <item>Пульсационная станция</item>
        <item>Пульсационная станция V2</item>
        <item>Беспилотная система</item>
        <item>Микроклиматическая станция (АПИК)</item>
        <item>Метеостанция М2</item>
        <item>Метеостанция М3</item>
    </string-array>

    <string-array name="seismic_station_names">
        <item>CMG-3ESP</item>
        <item>CMG-6TD</item>
    </string-array>

    <string-array name="unmanned_system_names">
        <item>Надводный комплекс</item>
        <item>Воздушный дрон</item>
    </string-array>

    <string-array name="module_type_names">
        <item>Базовая станция</item>
        <item>Метеостанция</item>
        <item>Город</item>
        <item>Растения</item>
        <item>Почва</item>
        <item>Агро</item>
        <item>Газоанализатор</item>
        <item>Газоанализатор V2</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>