<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:src="@drawable/brand_image_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextText2"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_background_registration"
        android:ems="10"
        android:hint="@string/new_login_Str"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextText4"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_background_registration"
        android:ems="10"
        android:hint="@string/org_str"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText5"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_background_registration"
        android:ems="10"
        android:hint="@string/password_str"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <EditText
        android:id="@+id/editTextText6"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="343dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_background_registration"
        android:ems="10"
        android:hint="@string/repeat_password_str"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <EditText
        android:id="@+id/editTextText3"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_background_registration"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <TextView
        android:id="@+id/textPolicy"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/user_agreement"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textColorHighlight="#59508104"
        android:textColorLink="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:checked="false"
        android:theme="@style/MySwitch"
        app:layout_constraintEnd_toStartOf="@+id/textPolicy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_button_registration"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/to_register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back_button"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/close"
        android:textColor="@color/black"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black" />


</androidx.constraintlayout.widget.ConstraintLayout>